--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <script>
-    console.log("asd")
+    var span = document.getElementById('span');
+
+function time() {
+  var d = new Date();
+  var s = d.getSeconds();
+  var m = d.getMinutes();
+  var h = d.getHours();
+  span.textContent = 
+    ("0" + h).substr(-2) + ":" + ("0" + m).substr(-2) + ":" + ("0" + s).substr(-2);
+}
+
+setInterval(time, 1000);
 </script>
-<h1>Hello</h1>
+<h1 id='span'>Hello</h1>
