--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ else try {
     console.log(obj[0][st].username);
     console.log(st)
     if(st==obj[0][st].username) console.log("same")
-    else window.location.href = "login.php?state";
+    else window.location.href = "login.html?state";
 } catch (error) {
   console.error(error);
   window.location.href = "login.php?state";
