--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@ function onload(){
 
 <body onload="onload()">
 
-<form action="index.php" method="POST">
+<form action="index.html" method="POST">
     <h1>Użytkownik</h1>
     <input type="text" id="user" name="user"><br><br>
     <input type="submit" value="Submit">
